# work

./: .#todo.org  .gitignore  email.txt  fly.org  todo.org
adv-str/: .gitignore  text.org
adv-str/archive/: basic.cpp
adv-str/auto/: m.el
adv-str/data/: AnalysisOutput.csv  DBData.csv  m.R  out1.csv  out2.csv  psh.ps1  test.csv
adv-str/dia/: info.tex  m.tex
adv-str/experiment/: AnalysisOutput.csv  Analyzers.cs  TAGS  marks.txt  test.csv  top_v1.csproj
adv-str/lrn_api/: .gitignore  GsaGuys.cs  client.cs  log.txt  lrn.csproj  lrn.sln  notes.org  rn.ps1
adv-str/testing3/: Test.cs
as_exam/: m.ipynb  m.org
as_exam/.ipynb_checkpoints/: m-checkpoint.ipynb
as_exam/as/: ds.R  m.R  mna.R
as_exam/as2/: lib.R  m.R  tcc.R
cv/: m.listing  m.py  m.tcbtemp  m.tex  m2.tex  out.txt  profile.yaml
cv/auto/: m.el  m2.el
dyn/: dyn.R  m-2019.ipynb  m.R  m2.R  note.org
dyn/.ipynb_checkpoints/: m-2019-checkpoint.ipynb
dyn/expr/: m.R  t.R  td.org
dyn/plot/: m.R  m.cpp  m.tex  myplot.tex
fe/: beam_freq.py  beam_freq_2elem.py  beam_static.py  m.ipynb  m2.py  notes.org
fe/.ipynb_checkpoints/: m-checkpoint.ipynb
fe/cw1/: .gitignore  main.tex  make.ps1  p.tex
fe/cw2/: .gitignore  Makefile  log.txt  main.tex  make.ps1
lcode/: .gitignore  CMakeLists.txt  m.cpp  m.ipynb  m.py  m2.py  n.org  pytest.ini  test_one.py
lcode/cpp/: .gitignore
ses/: .gitignore  note.org
ses/cw2/: CMakeLists.txt  m.cpp  m.h
ses/cw2/cpp/: beam_ductility_checker.cpp  beam_flex_designer.cpp  shower.cpp
ses/cw2r/: log.txt  main.blg  main.tex
ses/dia/: _region_.tex  d.tex  d2.tex  d3.tex  flr.tex  m.tex
ses/my_test/: CMakeLists.txt  Config.cmake.in  my_test.cpp  my_test.h  test.cpp  tester.cpp
(+132 files in other folders)
